[package]
name = "glove"
version = "0.1.3"
edition = "2021"
license = "ISC"
repository = "https://github.com/andrewbaxter/glove"
readme = "readme.md"
description = "Extremely client-server type-safe IPC"

[dependencies]
defer = "0.2"
libc = "0.2"
rustix = { version = "0.38", features = ["fs"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net", "fs"] }
