[package]
name = "glove"
version = "0.4.1"
edition = "2021"
license = "ISC"
repository = "https://github.com/andrewbaxter/glove"
readme = "readme.md"
description = "Extremely client-server type-safe IPC"

[features]
unix = ["dep:tokio", "dep:libc", "dep:rustix"]

[dependencies]
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
defer = "0.2"
rustix = { version = "0.38", features = ["fs"], optional = true }
libc = { version = "0.2", optional = true }
tokio = { version = "1", features = ["io-util", "net", "fs"], optional = true }
